Using the height of the header to calculate the position and the height of the fixed popup menu on mobile

--- a/css/sass/base/_base.scss
+++ b/css/sass/base/_base.scss
@@ -1,4 +1,8 @@
 :root {
+    
+    /** LAYOUT SIZES **/
+    --header-height: 7.2rem;
+    
     /** COLORS **/
     --white: hsl(0°, 0%, 100%);
     --black: hsl(0°, 0%, 0%);
