--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 :root {
+  /** LAYOUT SIZES **/
+  --header-height: 7.2rem;
   /** COLORS **/
   --white: hsl(0°, 0%, 100%);
   --black: hsl(0°, 0%, 0%);
@@ -53,12 +55,22 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 7.2rem;
+  height: var(--header-height);
   padding: 0 2.5rem; }
   .main-header .logo {
     width: 17rem;
     height: 1.6rem; }
-  .main-header .header__nav .close-menu {
+  .main-header .showhide-buttons .close-menu {
     display: none; }
+  .main-header .header__nav {
+    position: fixed;
+    top: var(--header-height);
+    left: 0;
+    width: 100vw;
+    height: calc(100vh - var(--header-height)); }
+    .main-header .header__nav ul {
+      display: flex;
+      flex-direction: column;
+      row-gap: 2rem; }
 
 /*# sourceMappingURL=styles.css.map */
